--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1 id="title">this works</h1>
+    <h1 id="title" class="ptn">this works</h1>
     <script src="index.js"></script>
 </body>
 
